--- a/index.html
+++ b/index.html
@@ -1,58 +1,40 @@
-<div class="page"></div>
-
-<div class="content">
-    <div class="content-section">
-        <div>
-            <h1>Dude and Scroll</h1>
-            <p class="arrow-animated">↓</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Music-Player</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+  <body>
+    <!-- Player-container -->
+    <div class="player-container">
+      <!-- img-container -->
+      <div class="img-container">
+        <img src="img/jacinto-1.jpg" alt="" />
+      </div>
+      <h2 id="title">Ahmad Zaher(remix)</h2>
+      <h3 id="artist">Ahmad</h3>
+      <audio src="music/jacinto-1.mp3"></audio>
+      <!-- Progress -->
+      <div class="progress-container" id="progress-container">
+        <div class="progress" id="progress"></div>
+        <div class="duration-warper">
+          <span class="current-time" id="current-time">0:00</span>
+          <span class="duration" id="duration">2:06</span>
         </div>
+      </div>
+      <!-- control -->
+      <div class="player-control">
+        <i class="fa fa-backward fa-2x" id="prev" title="Previous"></i>
+        <i class="fa fa-play fa-2x main-button" id="play" title="Play"></i>
+        <i class="fa fa-forward fa-2x" id="next" title="Next"></i>
+      </div>
     </div>
-    <div class="content-section">
-        <div>
-            <h1>What's this?</h1>
-            <p>
-                That's <a href="https://twitter.com/uuuuuulala" target="_blank">me</a> learning
-                the basic walk cycle animation and playing with the GSAP implementation&nbsp;of&nbsp;it.
-            </p>
-        </div>
-    </div>
-    <div class="content-section">
-        <div>
-            <h1>So what?</h1>
-            <p>
-                You can use this code and design concept for your project.
-                The animation parameters are easy to tweak, graphic elements can be replaced.
-            </p>
-            <p>
-                You can also give a follow on <a href="https://www.linkedin.com/in/ksenia-kondrashova/" target="_blank">linkedin</a>, <a href="https://codepen.io/ksenia-k" target="_blank">codepen</a> and <a href="https://twitter.com/uuuuuulala" target="_blank">twitter</a> :)
-            </p>
-        </div>
-    </div>
-    <div class="content-section">
-    </div>
-</div>
-
-<div class="animation-container">
-    <svg viewBox="0 -10 315 350">
-        <g class="dude" stroke="black" stroke-width="7" stroke-linecap="round" stroke-linejoin="round" fill="none">
-            <g class="leg">
-                <path class="leg-bottom" d="M182,317l-10.4-2.8c-2.7-0.7-4.5-3.2-4.4-6c1.7-13,3-27,3.7-42.1c0.8-16.5,0.7-32,0.1-46.1"/>
-                <path d="M171,220l6-60"/>
-            </g>
-            <g class="leg">
-                <path class="leg-bottom" d="M182,317l-10.2-2.7c-2.8-0.8-4.7-3.4-4.6-6.3c-0.8-13.9-1-29.2-0.2-45.8c0.7-15.2,2.1-29.4,4-42.2"/>
-                <path d="M171,222c0.3-10,4.3-42,5.3-48"/>
-            </g>
-
-            <g class="arm">
-                <path d="M175,75c-0.6,8.7-0.6,18.9,0.8,30.1c0.6,4.6,1.3,8.9,2.2,12.9"/>
-                <path class="arm-bottom" d="M186,175c-0.2-3.1-0.4-6.2-0.7-9.3c-1.5-16.9-4.1-32.9-7.3-47.7"/>
-            </g>
-            <g class="arm">
-                <path d="M178.8,82.2c-1.9,13.1-1.8,25.2-0.8,35.8"/>
-                <path class="arm-bottom" d="M186,175c-2.4-7.6-4.7-16.8-6.3-27.2c-1.6-11.3-2-21.3-1.7-29.8"/>
-            </g>
-            <path class="head" d="M195,14.8c-10.8-5.7-23.9,1.3-28.2,12.4c-4.9,13,6.3,28.4,17.8,29.1c13.2,0.8,22.2-16.1,19.5-26.7c-1.6-6.5-5.2-7.1-5.2-7.1"/>
-        </g>
-    </svg>
-</div>
+    <script src="app.js"></script>
+  </body>
+</html>
