--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="icon" type="image/x" href="img/Web-Icon.png" />
+    <link rel="icon" type="image/x" href="Web-Icon.png" />
   </head>
   <body>
     <!-- Player-container -->
